ajout de la partie technologie, card des projet et du menu version desktop

--- a/src/style/import.scss
+++ b/src/style/import.scss
@@ -1,2 +1,8 @@
 @import 'settings.scss';
 @import 'Home.scss';
+@import 'bandeau.scss';
+@import 'technologie.scss';
+@import 'project.scss';
+@import 'card_project.scss';
+@import 'menu.scss';
+
