--- a/src/style/card_project.scss
+++ b/src/style/card_project.scss
@@ -4,7 +4,7 @@
   background: #FFF;
   box-shadow: 2px 2px 100px 0px rgba(0, 0, 0, 0.20);
 
-  margin: $margin;
+  margin: 20px 0px 20px 0px;
   @keyframes slideInFromLeft {
     0% {
       transform: translateX(-100%);
