--- a/src/style/import.scss
+++ b/src/style/import.scss
@@ -5,4 +5,7 @@
 @import 'project.scss';
 @import 'card_project.scss';
 @import 'menu.scss';
-
+@import 'parcours.scss';
+@import 'elementParcours.scss';
+@import 'contact.scss';
+@import 'footer.scss';
