--- a/src/style/settings.scss
+++ b/src/style/settings.scss
@@ -5,7 +5,10 @@ $href_color : #000;
 $primary_color : #E70FAA;
 $secondary_color : #00C0FD;
 $Gradient-Heading : linear-gradient(90deg, $secondary_color -2.06%, $primary_color 100%);
-
+$button_color_success : #D7FFE0;
+$font_color_success : #018C0F;
+$button_color_danger : #FF0000;
+$color-heading: #1E0E62;
 
 //on import les polices Poppins et DM Sans
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
@@ -14,12 +17,15 @@ $font_menu : 'DM Sans', sans-serif;
 $font : 'Poppins', sans-serif;
 
 $border_radius : 20px;
+$border_radius_big : 100px;
 $border_radius_small : 10px;
 $border_radius_light : 5px;
 $padding-big : 40px;
 $padding : 20px;
 
+$margin_big : 40px;
 $margin : 20px;
+$margin_light : 10px;
 
 $shadow : 0px 0px 10px rgba(0,0,0,0.1);
 
@@ -60,9 +66,10 @@ body{
         font-size: 2.5rem;
         font-weight: 600;
         color: $solid_heading_color;
-        margin: 0;
+        margin: $margin_big 0;
         padding: 0;
         line-height: 1.2;
+        text-align: center;
     }
 
 }
