--- a/src/style/project.scss
+++ b/src/style/project.scss
@@ -2,7 +2,7 @@
   .project-list{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
 
