--- a/src/style/elementParcours.scss
+++ b/src/style/elementParcours.scss
@@ -1,15 +1,17 @@
-.element-parcours{
-    .title{
-        h3{
+.element-parcours {
+    .title {
+        h3 {
             font-size: 1.5rem;
             font-weight: 600;
             margin-bottom: 1rem;
             color: $dark_content_color;
         }
+
         display: flex;
         align-items: center;
         justify-content: space-between;
-        .type{
+
+        .type {
             width: 84px;
             height: 24px;
             border-radius: 100px;
@@ -19,20 +21,30 @@
             font-size: 9px;
             font-style: normal;
             font-weight: 600;
-            line-height: 26px; /* 288.889% */
+            line-height: 26px;
+            /* 288.889% */
         }
     }
-    .info{
+
+    .info {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        .location{
-            .lieux{
+
+        .location {
+            .lieux {
                 margin-left: 6em;
             }
         }
+
+        .date {
+            display: flex;
+            align-items: center;
+        }
     }
-    .ligne-demarcation{;
+
+    .ligne-demarcation {
+        ;
         width: 100%;
         height: 2px;
         background-color: #EBEAED;
